Add libfdt support.
BBL performs in memory operations to modify FDT entries. This is
perfectly fine for existing use case where only some properties are
modified. However, this is not an feasible option in case of
multiple subnode addition.

Add libfdt support by linking the libfdt source directly.

I understand that libfdt might have increased the size of bbl
significantly. However, this is just a temporary patch only meant
for linux capable boards. Once we have a proper boot loader with
separate firmware layer, this patch will no longer be required.
For example, u-boot has already support for libfdt. Thus, this
patch will be redundant and can be removed.

Signed-off-by: Atish Patra <atish.patra@wdc.com>

--- a/machine/machine.mk.in
+++ b/machine/machine.mk.in
@@ -2,11 +2,11 @@
 
 machine_subproject_deps = \
   softfloat \
-
+  libfdt \
 machine_hdrs = \
   atomic.h \
   bits.h \
-  fdt.h \
+  mfdt.h \
   emulation.h \
   encoding.h \
   fp_emulation.h \
@@ -20,7 +20,7 @@ machine_hdrs = \
   vm.h \
 
 machine_c_srcs = \
-  fdt.c \
+  mfdt.c \
   mtrap.c \
   minit.c \
   htif.c \
